@@ -1,5 +1,6 @@
 2010-08-01  6.6.3-3 Cristy  <quetzlzacatenango@image...>
   * Eliminate bogus "invalid colormap index" when pinging ICO images.
+  * Support -set density / units.
 
 2010-07-31  6.6.3-2 Cristy  <quetzlzacatenango@image...>
   * Only use the first alpha channel in PSD image.
